# MLOps-template

./: .gitignore  Makefile  TODO.md  pyproject.toml  readme.md
design_decisions/: readme.md
src/my_project/: readme.md
terraform/: .env.template  .gitignore  github.tf  load_env_variables.sh  version.tf  versions.tf
terraform/base/: github.tf  providers.tf  variables.tf
terraform/databricks/: .terraform.lock.hcl  cluster.tf  providers.tf  variables.tf
