[tool.poetry]
name = "my-project"  # Should match repo name. Convention is to use hyphens instead of underscores.
version = "0.0.1"
description = ""
authors = ["team name <team@email.com>"]
license = ""
packages = [{ include = "my_project", from = "src" }]  # Update `include` after renaming the package folder

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = "3.11"  # If this is a library, specify version *range* instead
# Python packages will be added here if running poetry install <package>
# Add *local* packages here, if any:
# my-local-package = { path = "..", develop = true }  # `develop` makes install *editable*

[tool.poetry.group.dev.dependencies]
# mypy, pylint, black, pytest, behave,
# matplotlib, ipykernel, nb-mypy, ipytest

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100